# YATTT

./: README.md  package-lock.json  yattt-ios-app-Info.plist
.github/workflows/: android_app.yaml  backend.yaml  backend.yml  backend_release.yaml  data_service_backend.yaml  data_service_frontend.yaml  ios_app.yml  swift.yml
ASE-IOS-APP/: Api.swift  ContentView.swift
ASE-IOS-APP.xcodeproj/: project.pbxproj
ASE-IOS-APP.xcodeproj/xcshareddata/xcschemes/: ASE-IOS-APP.xcscheme
ASE-IOS-APP.xcodeproj/xcuserdata/lauralikar.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ASE-IOS-APP.xcodeproj/xcuserdata/lauralikar.xcuserdatad/xcschemes/: xcschememanagement.plist
ASE-IOS-APPTests/: ASE_IOS_APPTests.swift
ASE-IOS-APPUITests/: ASE_IOS_APPUITestsLaunchTests.swift
yatt_frontend/yatt_web/: README.md  angular.json  package-lock.json  package.json
yatt_frontend/yatt_web/src/: index.html  main.ts  styles.css
yatt_frontend/yatt_web/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.interceptor.ts  data-api.service.ts  project.model.ts
yatt_frontend/yatt_web/src/services/: auth.interceptor.ts  auth.service.ts  data-api.service.ts
yattt_app/: README.md  settings.gradle.kts
yattt_app/app/: build.gradle.kts
yattt_app/app/src/main/: AndroidManifest.xml
yattt_app/gradle/: libs.versions.toml
yattt_app/gradle/wrapper/: gradle-wrapper.properties
yattt_backend/: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  backend.yaml  compile_docker.sh  deploy.sh  docker_action_setup.sh  docker_run.sh  populate_db.sh  setup.surql  setup_local_db.sh  test.sh  yattt_backend_deployment.yml
yattt_backend/src/: encryption.rs  error.rs  jwt.rs  lib.rs  macros.rs  main.rs  test_modules.rs
yattt_backend/src/db/: db_constants.rs  mod.rs  repositories.rs  surrealdb.rs
yattt_backend/src/models/: attendance.rs  auth.rs  card.rs  lecture.rs  mod.rs  user.rs
yattt_backend/src/routes/: attendance.rs  auth.rs  card.rs  mod.rs  root.rs
yattt_backend/tests/: mod.rs
yattt_backend/tests/api/auth/: mod.rs  register.rs
yattt_backend/tests/common/: mod.rs
yattt_data/: .env  development.md  docker-compose.override.yml
yattt_data/backend/: README.md  pyproject.toml
yattt_data/backend/app/: crud.py  models.py
yattt_data/backend/app/api/: main.py
yattt_data/backend/app/core/: config.py
yattt_data/backend/app/tests/: conftest.py
yattt_data/frontend/: README.md
yattt_data/frontend/src/: routeTree.gen.ts
yattt_data/frontend/src/client/: models.ts  services.ts
yattt_data/frontend/src/routes/: login.tsx  signup.tsx
yattt_ios/yattt_ios_app/: Api.swift  ApiHelper.swift  ContentView.swift  yattt_ios_appApp.swift
yattt_ios/yattt_ios_appTests/: MockURLProtocol.swift  yattt_ios_appTests.swift
yattt_ios/yattt_ios_appUITests/: yattt_ios_appUITestsLaunchTests.swift
yattt_ios_app/: ASE-IOS-APP.xctestplan  ContentView.swift
yattt_ios_app.xcodeproj/: project.pbxproj
yattt_ios_app.xcodeproj/xcuserdata/lauralikar.xcuserdatad/xcschemes/: xcschememanagement.plist
yattt_ios_app/ASE-IOS-APP/: ASE_IOS_APPApp.swift
yattt_ios_app/ASE-IOS-APPTests/: ASE_IOS_APPTests.swift
yattt_ios_app/ASE-IOS-APPUITests/: ASE_IOS_APPUITests.swift
yattt_ios_appTests/: yattt_ios_appTests.swift
yattt_ios_appUITests/: yattt_ios_appUITests.swift
(+57 files in other folders)
