[package]
name = "yattt_backend"
version = "0.2.0"
edition = "2021"

[dependencies]
# web framework
axum = "0.7"
hyper = { version = "1.0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.2", features = ["auth", "validate-request"] }

# async runtime
tokio = { version = "1.17", features = ["full"] }

# API documentation
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
utoipa-axum = { version = "0.1.2" }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }

# serialization deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# environment variables
dotenvy = "0.15.7"

# logging
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

# time handling utility
chrono = "0.4.39"

# database
surrealdb = "2.1.2"


[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
